--- a/flaskapp/templates/sample.html
+++ b/flaskapp/templates/sample.html
@@ -16,9 +16,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1 class="text-center">{{ name }}</h1>
-                        <img src="http://www.gravatar.com/avatar/{{ gravatarhash }}" class="img-responsive img-circle center-block" width="120px">
-                        <h3 class="text-center">{{ affiliation }}</h3>
+                        <h1 class="text-center">{{ user['name'] }}</h1>
+                        <img src="http://www.gravatar.com/avatar/{{ user['gravatarhash'] }}" class="img-responsive img-circle center-block" width="120px">
+                        <h3 class="text-center">{{ user['affiliation'] }}</h3>
                     </div>
                 </div>
             </div>
