--- a/flaskapp/templates/sample.html
+++ b/flaskapp/templates/sample.html
@@ -23,12 +23,13 @@
                 </div>
             </div>
         </div>
+        {% for article in articles %}
         <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px; margin-top:15px;">
             <div class="panel-heading">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2 class="text-center">{{ title }}</h2>
+                            <h2 class="text-center">{{ articles[article]['title'] }}</h2>
                         </div>
                     </div>
                 </div>
@@ -37,70 +38,20 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-2">
-                            <img src="https://c2.staticflickr.com/8/7503/15795863409_f8a8bd3bd9_z.jpg" class="img-responsive img-circle center-block" width="120px">
+                            <img src="{{ articles[article]['image'] }}" class="img-responsive img-circle center-block" width="120px">
                         </div>
                         <div class="col-md-8">
-                            <p class="lead text-default">{{ summary }}</p>
+                            <p class="lead text-default">{{ articles[article]['summary'] }}</p>
                             <p class="lead text-default">This article has been cited by...</p>
                         </div>
                         <div class="col-md-2">
-                            <div data-badge-type="medium-donut" data-doi="{{ doiurl }}" data-hide-no-mentions="true" class="altmetric-embed text-center img-responsive"></div>
+                            <div data-badge-type="medium-donut" data-doi="{{ articles[article]['doiurl'] }}" data-hide-no-mentions="true" class="altmetric-embed text-center img-responsive"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px; margin-top: -25px;">
-            <div class="panel-heading">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h2 class="text-center">Scissors and Paste, Edges and Nodes</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-body panel-default">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-2">
-                            <img src="https://pbs.twimg.com/media/Ca2cv37WAAApfSc.png:large" class="img-responsive img-circle center-block" width="120px">
-                        </div>
-                        <div class="col-md-8">
-                            <p class="lead text-default">Building upon the success of my research into representations of Australia, I wished to delve deeper into the networks that arose from Scissors-and-Paste practices. Institutional funding for training and equipment allowed me to develop new methodologies for determining not only reprinting, but directionality and branching within these networks.</p>
-                        </div>
-                        <div class="col-md-2">
-                            <img src="https://pbs.twimg.com/media/Ca2i5mpXIAAR9XJ.png" class="img-responsive img-circle center-block" width="120px">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px; margin-top: -25px;">
-            <div class="panel-heading">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h2 class="text-center">Rapunzel and the Ivory Tower: How Open Access Will Save the Humanities (from Themselves)</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-body panel-default">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-2">
-                            <div data-badge-type="medium-donut" data-doi="http://dx.doi.org/10.1080/13555502.2013.865977" data-hide-no-mentions="true" class="altmetric-embed text-center img-responsive"></div>
-                        </div>
-                        <div class="col-md-8">
-                            <p class="lead text-default">As I developed as a writer and researcher, I found myself increasingly concerned with the current publication ecosystem. This article, one of a four-part collection on open access within the humanities, consolidated my views on the ethical and practical impetus to move toward new publication models.</p>
-                        </div>
-                        <div class="col-md-2">
-                            <img src="https://c2.staticflickr.com/6/5612/15567560315_fa15117bcc.jpg" class="img-responsive img-circle center-block" width="120px">
-                        </div>
-                    </div>
-                </div>
-            </div>
+        {% endfor %}
         </div>
     </div>
 </body>
