--- a/flaskapp/templates/sample.html
+++ b/flaskapp/templates/sample.html
@@ -29,7 +29,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2 class="text-center">{{ articles[article]['title'] }}</h2>
+                            <h2 class="text-center">{{ article['doi'] }}</h2>
                         </div>
                     </div>
                 </div>
@@ -38,14 +38,14 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-2">
-                            <img src="{{ articles[article]['image'] }}" class="img-responsive img-circle center-block" width="120px">
+                            <img src="{{ article["image"] }}" class="img-responsive img-circle center-block" width="120px">
                         </div>
                         <div class="col-md-8">
-                            <p class="lead text-default">{{ articles[article]['summary'] }}</p>
+                            <p class="lead text-default">{{ article['summary'] }}</p>
                             <p class="lead text-default">This article has been cited by...</p>
                         </div>
                         <div class="col-md-2">
-                            <div data-badge-type="medium-donut" data-doi="{{ articles[article]['doiurl'] }}" data-hide-no-mentions="true" class="altmetric-embed text-center img-responsive"></div>
+                            <div data-badge-type="medium-donut" data-doi="{{ article['url'] }}" data-hide-no-mentions="true" class="altmetric-embed text-center img-responsive"></div>
                         </div>
                     </div>
                 </div>
