--- a/flaskapp/templates/sample.html
+++ b/flaskapp/templates/sample.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1 class="text-center">{{ profile_data.given_names }} {{ profile_data.family_name }}</h1>
+                        <h1 class="text-center">{{ profile_data.name }}</h1>
                         <img src="http://www.gravatar.com/avatar/{{ profile_data.gravatarhash }}" class="img-responsive img-circle center-block" width="120px">
                         <h3 class="text-center">{{ profile_data.affiliation }}</h3>
                     </div>
