Add Altmetrics info

--- a/flaskapp/templates/sample.html
+++ b/flaskapp/templates/sample.html
@@ -44,7 +44,7 @@
                             <p class="lead text-default">{{ article['description'] }}</p>
                         </div>
                         <div class="col-md-2">
-                            <div data-badge-type="medium-donut" data-doi="{{ article['url'] }}" data-hide-no-mentions="true" class="altmetric-embed text-center img-responsive"></div>
+                            <div data-badge-type="medium-donut" data-doi="https://dx.doi.org/{{ article['doi'] }}" data-hide-no-mentions="true" class="altmetric-embed text-center img-responsive"></div>
                         </div>
                     </div>
                 </div>
