--- a/flaskapp/templates/sample.html
+++ b/flaskapp/templates/sample.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1 class="text-center">{{ profile_data.name }}</h1>
+                        <h1 class="text-center">{{ profile_data.given_names }} {{ profile_data.family_name }}</h1>
                         <img src="http://www.gravatar.com/avatar/{{ profile_data.gravatarhash }}" class="img-responsive img-circle center-block" width="120px">
                         <h3 class="text-center">{{ profile_data.affiliation }}</h3>
                     </div>
@@ -24,6 +24,60 @@
             </div>
         </div>
         {% for article in articles %}
+        {% if article.box_type == "full" %}
+         <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px; margin-top:15px;margin-top: -25px;"">
+            <div class="panel-heading">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-12">
+                         <h2 class="text-center">{{ article['title'] }}</h2>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="panel-body panel-default">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-8">
+                         <p class="lead text-default">{{ article['description'] }}</p>
+                     </div>
+                     <div class="col-md-4">
+                         <div data-badge-type="medium-donut" data-doi="https://dx.doi.org/{{ article['doi'] }}" data-badge-details='right' class="altmetric-embed text-center img-responsive"></div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+        {% endif %}
+        {% if article.box_type == "images" %}
+         <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px; margin-top: -25px;">
+            <div class="panel-heading">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-12">
+                            <h2 class="text-center">{{ article['title'] }}</h2>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="panel-body panel-default">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-2">
+                        <a href="" targe="_blank"><img src="" class="img-responsive img-circle center-block" width="120px"></a>
+                     </div>
+                     <div class="col-md-8">
+                            <p class="lead text-default">{{ article['description'] }}</p>
+                     </div>
+                     <div class="col-md-2">
+                        <a href="" targe="_blank"><img src="" class="img-responsive img-circle center-block" width="120px"></a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+        {% endif %}
+        {% if article.box_type == "donut" %}
         <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px; margin-top:15px;">
             <div class="panel-heading">
                 <div class="container">
@@ -50,6 +104,7 @@
                 </div>
             </div>
         </div>
+        {% endif %}
         {% endfor %}
     
         </div>
