--- a/flaskapp/templates/new.html
+++ b/flaskapp/templates/new.html
@@ -45,10 +45,11 @@
                   <div class="row">
                      <div class="col-md-14">
                         <p class="lead text-default">
-                          <form action="">
-                          	<input class="text"/>
-                          	<button type="submit">Orctrix me!</button>
-                          </form>
+                        <form method="POST">
+                           {{ form.hidden_tag() }}
+                           {{ form.orcid.label }} {{ form.orcid() }}
+                           {{ form.submit() }}
+                        </form>
                         </p>
                      </div>
                   </div>
