--- a/flaskapp/templates/new.html
+++ b/flaskapp/templates/new.html
@@ -19,7 +19,7 @@
                <div class="row">
                   <div class="col-md-12">
                      <h1 class="text-center">ORCTRIX</h1>
-                     <img src="/orctrix.png" class="img-responsive img-circle center-block" width="120px">
+                     <img src="static/orctrix.png" class="img-responsive img-circle center-block" width="120px">
                      <h3 class="text-center">Create a beautiful research portfolio, the easy way</h3>
                      <center><a href="#" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a><a href="#" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a><a href="#" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github"></i></a></center>
                   </div>
