Made logo bigger

--- a/flaskapp/templates/new.html
+++ b/flaskapp/templates/new.html
@@ -19,7 +19,7 @@
                <div class="row">
                   <div class="col-md-12">
                      <h1 class="text-center">ORCTRIX</h1>
-                     <img src="static/orctrix.png" class="img-responsive img-circle center-block" width="120px">
+                     <img src="static/orctrix.png" class="img-responsive  center-block" width="360px">
                      <h3 class="text-center">Create a beautiful research portfolio, the easy way</h3>
                      <center><a href="#" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a><a href="#" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a><a href="#" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github"></i></a></center>
                   </div>
@@ -34,7 +34,8 @@
             <div class="panel-heading">
                <div class="container">
                   <div class="row">
-                     <div class="col-md-12">
+                  <div class="col-md-3"></div>
+                     <div class="col-md-6">
                         <h2 class="text-center">Get Started by entering your ORCID</h2>
                      </div>
                   </div>
@@ -43,7 +44,8 @@
             <div class="panel-body panel-default">
                <div class="container">
                   <div class="row">
-                     <div class="col-md-14">
+                  	 <div class="col-md-6"></div>
+                     <div class="col-md-6">
                         <p class="lead text-default">
                         <form method="POST">
                            {{ form.hidden_tag() }}
